@@ -16,6 +16,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   b - add node name to pbsnodes XML output (NCIFCRF)
   b - correct Resource_list in qstat XML output (NCIFCRF)
   b - pam_authuser fixes from uam.es
+  e - allow 'pbsnodes -l' to work with a node spec
 
 2.1.6
   b - freebsd5 build fix
